# php-ole

./: CMakeLists.txt  README.md  config.h.cmake  config.m4  ole.c  ole_stream.c  php_ole.h
php/: ole.php
php/test/: passwd_abc.docx
